@@ -949,4 +949,6 @@ ATS V1.5:
 
     BUG-52769. HADOOP-1023. Add more logging in WASB page blob read
     function. (Duo Xu via Arpit Agarwal)
-    
+
+    HADOOP-12903. IPC Server should allow suppressing exception logging by type,
+    not log 'server too busy' messages. (Arpit Agarwal)
